--- a/Assets/Resources/config/littosim.conf
+++ b/Assets/Resources/config/littosim.conf
@@ -3,7 +3,7 @@ SERVER_ADDRESS;localhost;
 ACTIVEMQ_CONNECT;false;
 
 [ User]
-LANGUAGE;fr;
+LANGUAGE;en;
 LANGUAGE_LIST;fr,en;
 BUTTON_SIZE;1500;
 LOG_USER_ACTION;true;
